further reduce gson usage and convert classed to records